--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
   sdk: ">=2.19.6 <3.0.0"
 
 dependencies:
+  bubble_bottom_bar: ^2.0.0
   cloud_firestore: ^4.7.1
   cupertino_icons: ^1.0.2
   dartz: ^0.10.1
