--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   firebase_storage: ^11.2.1
   flutter:
     sdk: flutter
+  flutter_document_picker: ^5.2.1
   flutter_hooks: ^0.18.6
   flutter_phoenix: ^1.1.1
   flutter_riverpod: ^2.3.6
@@ -30,6 +31,7 @@ dependencies:
   image_picker: ^0.8.7+5
   internet_connection_checker: ^1.0.0+1
   lottie: ^2.3.2
+  pdf_viewer_plugin: ^2.0.1
   share_plus: ^7.0.1
   shared_preferences: ^2.1.1
   url_launcher: ^6.1.11
