--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   get_it: ^7.6.0
   google_sign_in: ^6.1.0
   hooks_riverpod: ^2.3.6
+  image: ^4.0.17
   image_picker: ^0.8.7+5
   internet_connection_checker: ^1.0.0+1
   lottie: ^2.3.2
